# king

./: .gitignore  README.md  README_zh.md
chain/: .gitignore  Anchor.toml  README.md  detail.md
chain/idls/: pool.json
chain/programs/entry/: Cargo.toml
chain/programs/entry/src/: lib.rs
chain/programs/king/: Cargo.toml
chain/programs/king/src/: constants.rs  lib.rs
chain/programs/king/src/auction/: auction.rs  mod.rs
chain/tests/: cpi.ts  entry.ts  king.ts  preset.ts
document/: README.md  README_zh.md
document/cn/: 01_coding_entry.md  10_coding_king.md  11_coding_resource.md  12_coding_world.md  AI_coding.md  AI_sample_doc.md  functions.md  project.md
document/vibe/: 1-overview.md  1-world.md
