[package]
name = "king"
version = "0.1.0"
description = "Septopus king center."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "king"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = {version = "0.31.1", features = ["metadata"]}
hex = "0.4.3"
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"